# ParallelcomputationofPInumber

./: CMakeLists.txt  README.md  main.cpp
